--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -14,7 +14,7 @@
 
 .gatsby-highlight pre[class*='language-'].line-numbers {
   padding: 0;
-  padding-left: 3em;
+  padding-left: 3.5em;
   overflow: initial;
 }
 
